--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,15 +4,14 @@
 
     <parent>
         <groupId>org.openmrs.module</groupId>
-        <artifactId>ohrimamba</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <artifactId>mamba-etl</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ohrimamba-api</artifactId>
+    <artifactId>mamba-etl-api</artifactId>
     <packaging>jar</packaging>
     <name>MambaETL Reference module - API</name>
     <description>OpenMRS MambaETL Reference module - API</description>
-
 
     <dependencies>
 
@@ -24,18 +23,13 @@
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>mamba-core-api</artifactId>
         </dependency>
 
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
