--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -5,11 +5,11 @@
 
     <parent>
         <groupId>org.openmrs.module</groupId>
-        <artifactId>ohrimamba</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <artifactId>mamba-etl</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ohrimamba-omod</artifactId>
+    <artifactId>mamba-etl-omod</artifactId>
     <packaging>jar</packaging>
     <name>MambaETL Reference module - OMOD</name>
     <description>OpenMRS MambaETL Reference module - OMOD</description>
@@ -64,8 +64,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.openmrs.module</groupId>
-            <artifactId>ohrimamba.core-omod</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
@@ -129,6 +131,28 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.openmrs.maven.plugins</groupId>
+                <artifactId>openmrs-dependency-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+
+            <!--
+            <plugin>
+                <groupId>org.openmrs.maven.plugins</groupId>
+                <artifactId>openmrs-sdk-maven-plugin</artifactId>
+            </plugin>
+            -->
 
         </plugins>
 
