--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
         <openmrsPlatformVersion>2.0.0</openmrsPlatformVersion>
         <webservicesRestVersion>2.21.0</webservicesRestVersion>
         <legacyUIomodVersion>1.8.2</legacyUIomodVersion>
-        <mambaETLCoreVersion>2.0.1-SNAPSHOT</mambaETLCoreVersion>
+        <javaxAnnotationVersion>1.3.2</javaxAnnotationVersion>
+        <mambaETLCoreVersion>1.0.1-SNAPSHOT</mambaETLCoreVersion>
         <junit5Version>5.7.2</junit5Version>
         <junit4Version>4.13.1</junit4Version>
         <MODULE_ID>${project.parent.artifactId}</MODULE_ID>
@@ -279,7 +280,7 @@
                                     <argument>-d openmrs</argument>
 
                                     <!-- The target or analysis Database where the ETL data is stored -->
-                                    <argument>-a ssemr_etl</argument>
+                                    <argument>-a analysis_db</argument>
 
                                     <!-- File with a list of all files with stored procedures -->
                                     <!-- Remove this argument after automating core to auto-read this -->
