--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     </parent>
 
     <groupId>org.openmrs.module</groupId>
-    <artifactId>ohrimamba</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <artifactId>mamba-etl</artifactId>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>MambaETL Reference Module</name>
     <description>MambaETL Reference Module</description>
@@ -19,9 +19,9 @@
     <url>https://wiki.openmrs.org/x/FQ4z</url>
 
     <scm>
-        <connection>scm:git:git@github.com:UCSF-IGHS/openmrs-module-ohri-mamba.git</connection>
-        <url>https://github.com/UCSF-IGHS/openmrs-module-ohri-mamba</url>
-        <developerConnection>scm:git:git@github.com:UCSF-IGHS/openmrs-module-ohri-mamba.git</developerConnection>
+        <connection>scm:git:git@github.com:UCSF-IGHS/openmrs-module-mamba-etl.git</connection>
+        <url>https://github.com/UCSF-IGHS/openmrs-module-mamba-etl</url>
+        <developerConnection>scm:git:git@github.com:UCSF-IGHS/openmrs-module-mamba-etl.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -34,7 +34,8 @@
         <openmrsPlatformVersion>2.0.0</openmrsPlatformVersion>
         <webservicesRestVersion>2.21.0</webservicesRestVersion>
         <legacyUIomodVersion>1.8.2</legacyUIomodVersion>
-        <mambaETLCoreVersion>2.0.1-SNAPSHOT</mambaETLCoreVersion>
+        <javaxAnnotationVersion>1.3.2</javaxAnnotationVersion>
+        <mambaETLCoreVersion>1.0.1-SNAPSHOT</mambaETLCoreVersion>
         <junit5Version>5.7.2</junit5Version>
         <junit4Version>4.13.1</junit4Version>
         <MODULE_ID>${project.parent.artifactId}</MODULE_ID>
@@ -117,14 +118,15 @@
             </dependency>
 
             <dependency>
-                <groupId>org.openmrs.module</groupId>
-                <artifactId>ohrimamba.core-omod</artifactId>
-                <version>${mambaETLCoreVersion}</version>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${javaxAnnotationVersion}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.openmrs.module</groupId>
-                <artifactId>ohrimamba.core-api</artifactId>
+                <artifactId>mamba-core-api</artifactId>
                 <version>${mambaETLCoreVersion}</version>
                 <type>jar</type>
             </dependency>
@@ -134,13 +136,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.openmrs.module</groupId>
-            <artifactId>ohrimamba.core-api</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.0.0</version>
         </dependency>
     </dependencies>
 
     <build>
-
         <pluginManagement>
 
             <plugins>
@@ -161,7 +163,7 @@
                                 <artifactItems>
                                     <artifactItem>
                                         <groupId>org.openmrs.module</groupId>
-                                        <artifactId>ohrimamba.core-api</artifactId>
+                                        <artifactId>mamba-core-api</artifactId>
                                         <outputDirectory>${project.build.directory}/mamba-etl</outputDirectory>
                                         <includes>_core/**</includes>
                                     </artifactItem>
@@ -190,6 +192,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.2.0</version>
+                    <configuration>
+                        <includeEmptyDirs>true</includeEmptyDirs>
+                    </configuration>
                     <executions>
 
                         <!-- 2. Copy contents of the resources directory of the dependency jar to a target location -->
@@ -291,18 +296,29 @@
                                     <!-- Set 1 to recompile/build the scripts else 0 - not to. If 1 - don't forget to change the liquibase changeset ID -->
                                     <argument>-b 1</argument>
 
-                                    <!-- add any other arguments below -->
-                                    <argument></argument>
+                                    <argument/>
 
-                                    <argument></argument>
-
-                                    <argument></argument>
+                                    <argument/>
 
                                 </arguments>
                             </configuration>
                         </execution>
 
+                        <execution>
+                            <id>run-tests-after-install</id>
+                            <phase>install</phase>
+                            <goals>
+                                <goal>exec</goal>
+                            </goals>
+                            <configuration>
+                                <executable>mvn</executable>
+                                <arguments>
+                                    <argument>surefire:test</argument>
+                                </arguments>
+                            </configuration>
+                        </execution>
                     </executions>
+
                 </plugin>
 
                 <plugin>
@@ -314,6 +330,12 @@
                         <target>8</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>default-testCompile</id>
+                            <phase>test</phase>
+                        </execution>
+                    </executions>
                 </plugin>
 
                 <plugin>
@@ -348,7 +370,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12</version>
+                    <version>3.2.5</version>
+                    <configuration>
+                        <includes>
+                            <include>**/*Test.java</include>
+                        </includes>
+                    </configuration>
                 </plugin>
 
                 <plugin>
@@ -380,45 +407,43 @@
                     <version>2.1</version>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.openmrs.maven.plugins</groupId>
+                    <artifactId>openmrs-dependency-maven-plugin</artifactId>
+                    <version>1.0.0</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>retrieve-versions</goal>
+                                <goal>create-versions</goal>
+                                <goal>compare-versions</goal>
+                                <goal>attach-versions</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <executions>
+                        <execution>
+                            <phase>generate-test-resources</phase>
+                            <goals>
+                                <goal>parse-version</goal>
+                            </goals>
+                            <configuration>
+                                <propertyPrefix>omrsVersion</propertyPrefix>
+                                <versionString>${openmrsPlatformVersion}</versionString>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+
             </plugins>
 
         </pluginManagement>
-
-        <plugins>
-            <plugin>
-                <groupId>org.openmrs.maven.plugins</groupId>
-                <artifactId>openmrs-dependency-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>retrieve-versions</goal>
-                            <goal>create-versions</goal>
-                            <goal>compare-versions</goal>
-                            <goal>attach-versions</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <phase>generate-test-resources</phase>
-                        <goals>
-                            <goal>parse-version</goal>
-                        </goals>
-                        <configuration>
-                            <propertyPrefix>omrsVersion</propertyPrefix>
-                            <versionString>${openmrsPlatformVersion}</versionString>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-
     </build>
 
     <repositories>
@@ -427,7 +452,6 @@
             <id>openmrs-repo</id>
             <name>OpenMRS Nexus Repository</name>
             <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
-            <!-- <url>https://openmrs.jfrog.io/artifactory/public/</url> -->
         </repository>
 
         <repository>
@@ -445,7 +469,6 @@
             <id>openmrs-repo</id>
             <name>OpenMRS Nexus Repository</name>
             <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
-            <!-- <url>https://openmrs.jfrog.io/artifactory/public/</url>-->
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -465,5 +488,26 @@
             <url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <developers>
+        <developer>
+            <id>OpenMRS-MambaETL-MakSPH</id>
+            <name>Arthur D. Mugume</name>
+            <organization>MakSPH</organization>
+            <organizationUrl>https://mets.or.ug</organizationUrl>
+        </developer>
+        <developer>
+            <id>OpenMRS-MambaETL-UCSF</id>
+            <name>Laureen G. Omare</name>
+            <organization>UCSF</organization>
+            <organizationUrl>http://ucglobalprograms.org/kenya</organizationUrl>
+        </developer>
+        <developer>
+            <id>OpenMRS-MambaETL-UoN</id>
+            <name>Amos Laboso</name>
+            <organization>UoN</organization>
+            <organizationUrl>https://www.uonbi.ac.ke</organizationUrl>
+        </developer>
+    </developers>
 
 </project>
